feat:新增了打包为可执行文件的方式
